<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="zoom_level_1">Zoom Level One</string>
    <string name="zoom_level_2">Zoom Level Two</string>
    <string name="zoom_level_3">Zoom Level Three</string>
    <string name="zoom_str_1">1</string>
    <string name="zoom_str_2">2</string>
    <string name="zoom_str_3">3</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="go">GO</string>
    <string name="finish">Finish</string>
    <string name="item_1">Item 1</string>
    <string name="a_1_r_1">A-1 R-1</string>
    <string name="_0987654321">0987654321</string>
    <string name="prev">PREV</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="q_login">Please select your account to start picking.</string>
    <string name="john">John Doe</string>
    <string name="jane">Jane Dale</string>
    <string name="gadgeon">Powered by GadgEon Smart Systems</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_pick_up_pending">Do you want to pick-up the pending items?</string>
    <string name="_skip_item">Do you want to skip</string>
    <string name="list_empty">Your list is empty. Do you want to get a new list?</string>


    <!-- Beacon -->
    <string name="beacon">Beacon</string>
    <string name="beacon_ibeacon">iBeacon</string>
    <string name="beacon_eddystone">Eddystone</string>
    <string name="beacon_rssi">RSSI</string>
    <string name="beacon_tx">TX</string>
    <string name="beacon_uuid">UUID</string>
    <string name="beacon_major">Major</string>
    <string name="beacon_minor">Minor</string>
    <string name="distance">Distance</string>

    <!-- Map -->
    <string name="title_map">Map</string>

    <!-- Radar-->
    <string name="title_radar">Radar</string>

    <!-- Chart -->
    <string name="title_chart">Chart</string>

    <!-- Navigate -->
    <string name="title_navigation">Navigation</string>

    <string name="axis_label_time">Time in seconds</string>
    <string name="axis_label_rssi">RSSI in dBm</string>
    <string name="axis_label_rssi_filtered">Filtered RSSI in dBm</string>
    <string name="axis_label_distance">Distance in meters</string>
    <string name="axis_label_frequency">Frequency in Hz</string>
    <string name="axis_label_variance">Variance in dBm</string>

    <!-- Filter -->
    <string name="title_filter">Filter</string>
    <string name="filter_type">Beacon Type</string>
    <string name="filter_minimum_rssi">@string/beacon_rssi</string>
    <string name="filter_distance">@string/distance</string>
    <string name="filter_distance_immediate">Immediate</string>
    <string name="filter_distance_near">Near</string>
    <string name="filter_distance_far">Far</string>
    <string name="filter_uuid">@string/beacon_uuid</string>
    <string name="filter_major">@string/beacon_major</string>

    <!-- Menu -->
    <string name="menu_filter">@string/title_filter</string>
    <string name="menu_color">Coloring</string>
    <string name="menu_color_by_instance">Instances</string>
    <string name="menu_color_by_type">Types</string>
    <string name="menu_color_by_property">Properties</string>
    <string name="menu_value">Value</string>
    <string name="menu_value_rssi">RSSI</string>
    <string name="menu_value_rssi_filtered">RSSI (Filtered)</string>
    <string name="menu_value_distance">Distance</string>
    <string name="menu_value_frequency">Frequency</string>
    <string name="menu_value_variance">Variance</string>

    <!-- Errors -->
    <string name="error_location_disabled">Location services disabled</string>
    <string name="error_bluetooth_disabled">Bluetooth disabled</string>
    <string name="action_enable">Enable</string>
    <!--  <string-array name="start_roomlist">
      <item>Start</item>
      <item>My location</item>
      <item>Hall</item>
      <item>Bedroom-1</item>
      <item>Bedroom-2</item>
      <item>Bedroom-3</item>
      <item>Kitchen</item>
      <item>Sitout</item>
  </string-array>
      <string-array name="stop_roomlist">
          <item>Stop</item>
          <item>Hall</item>
          <item>Bedroom-1</item>
          <item>Bedroom-2</item>
          <item>Bedroom-3</item>
          <item>Kitchen</item>
          <item>Sitout</item>
      </string-array>-->
    <string-array name="start_roomlist">
        <item>Start</item>
        <item>My location</item>
        <item>H-1</item>
        <item>H-2</item>
        <item>H-3</item>
        <item>H-4</item>
        <item>D-1</item>
        <item>D-2</item>
        <item>D-3</item>
        <item>D-4</item>
    </string-array>
    <string-array name="stop_roomlist">
        <item>Stop</item>
        <item>H-1</item>
        <item>H-2</item>
        <item>H-3</item>
        <item>H-4</item>
        <item>D-1</item>
        <item>D-2</item>
        <item>D-3</item>
        <item>D-4</item>
    </string-array>

    <string name="start_txt">Start</string>
    <string name="stop_txt">Stop</string>
    <string name="indoor_navigation">Indoor Navigation</string>
</resources>
