<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="70dp"
    android:layout_margin="15dp"
    android:background="@drawable/data_item_bg">

    <CheckBox
        android:id="@+id/item_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:clickable="false" />

    <TextView
        android:id="@+id/i_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item_1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/i_loc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_title_tv"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/a_1_r_1"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/i_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_loc_tv"
        android:layout_marginStart="10dp"
        android:text="@string/_0987654321"
        android:textSize="16sp"
        android:textStyle="normal" />

</RelativeLayout>